--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>La page que vous recherchez n'existe pas (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
@@ -56,10 +56,10 @@
 
 <body>
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
+  <div class="jumbotron">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>La page que vous désirez vistier n'existe pas ou plus.</h1>
+      <p>Vous avez peut-être mal orthographié la page web ou celle-ci a été déplacée.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
   </div>
