--- a/public/422.html
+++ b/public/422.html
@@ -3,6 +3,7 @@
 <head>
   <title>The change you wanted was rejected (422)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8"/>
   <style>
   body {
     background-color: #EFEFEF;
@@ -58,10 +59,10 @@
   <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+      <h1>Le changement effectué a été rejeté.</h1>
+      <p>Vous n'avez peut-être pas les droits pour effectuer un tel changement</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Si vous êtes le propriétaire de l'app, vous pouvez aller dans les logs pour plus d'infmations.</p>
   </div>
 </body>
 </html>
