--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,7 @@
 <head>
   <title>La page que vous recherchez n'existe pas (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8"/>
   <style>
   body {
     background-color: #EFEFEF;
@@ -14,7 +15,7 @@
 
   div.dialog {
     width: 95%;
-    max-width: 33em;
+    max-width: 35em;
     margin: 4em auto 0;
   }
 
@@ -56,15 +57,12 @@
 
 <body>
   <!-- This file lives in public/404.html -->
-   <%= link_to root_path do %>
-    <%= image_tag "Logo-horizontal-test-gris-rose.png", class: "navbar-brand", id: "logo" %>
-     <% end %>
   <div class="dialog">
     <div>
       <h1>La page que vous désirez visiter n'existe pas ou plus.</h1>
-      <p>Vous avez peut-être mal orthographié la page web ou celle-ci a été déplacée. Vous pouvez retourner sur la page <%= link_to "page d'accueil", root_path %> </p>
+      <p>Vous avez peut-être mal orthographié la page web ou celle-ci a été déplacée. Vous pouvez retourner sur la page <a href="www.hipcleaner.com">d'accueil</a>.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Si vous êtes le propriétaire de l'app, vous pouvez aller dans les logs pour plus d'infmations.</p>
   </div>
 </body>
 </html>
