--- a/public/500.html
+++ b/public/500.html
@@ -3,6 +3,7 @@
 <head>
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8"/>
   <style>
   body {
     background-color: #EFEFEF;
@@ -60,7 +61,7 @@
     <div>
       <h1>We're sorry, but something went wrong.</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Si vous êtes le propriétaire de l'app, vous pouvez aller dans les logs pour plus d'infmations.</p>
   </div>
 </body>
 </html>
